<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_pin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:id="@+id/create_pin"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_passcode"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_below="@+id/create_pin"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:id="@+id/enter_passcode_text"/>

    <EditText
        android:id="@+id/enter_passcode_editTxt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/enter_passcode_text"
        android:gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:inputType="numberPassword"
        android:textSize="12sp"
        android:maxLength="4"
        android:focusable="true"
        android:hint="@string/four_digit"
        android:ems="10" >

        <requestFocus/>
    </EditText>

    <TextView
        android:id="@+id/reenter_passcode_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:textSize="12sp"
        android:text="@string/reenter_passcode"
        android:textStyle="bold"
        android:layout_below="@id/enter_passcode_editTxt"/>

    <EditText
        android:id="@+id/reenter_passcode_editTxt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/reenter_passcode_txt"
        android:gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:inputType="numberPassword"
        android:textSize="12sp"
        android:maxLength="4"
        android:focusable="true"
        android:hint="@string/four_digit"
        android:ems="10" />

    <TextView
        android:id="@+id/phone_num_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:textSize="12sp"
        android:text="@string/mobile"
        android:textStyle="bold"
        android:layout_below="@id/reenter_passcode_editTxt"/>

    <EditText
        android:id="@+id/phone_num_editTxt_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/phone_num_id"
        android:gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:inputType="phone"
        android:textSize="12sp"
        android:maxLength="10"
        android:focusable="true"
        android:hint="@string/mobile"
        android:ems="10" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:gravity="center"
        android:layout_below="@+id/phone_num_editTxt_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/create_button"/>
</RelativeLayout>