<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_passcode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:id="@+id/change_passcode"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/old_passcode"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_below="@+id/change_passcode"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:id="@+id/old_passcode"/>

    <EditText
        android:id="@+id/enter_old_passcode_editTxt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/old_passcode"
        android:gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:inputType="numberPassword"
        android:textSize="12sp"
        android:maxLength="4"
        android:focusable="true"
        android:hint="@string/four_digit"
        android:ems="10" >

        <requestFocus/>
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_passcode"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_below="@+id/enter_old_passcode_editTxt"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:id="@+id/new_passcode_txt_id"/>

    <EditText
        android:id="@+id/enter_new_passcode_editTxt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/new_passcode_txt_id"
        android:gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:inputType="numberPassword"
        android:textSize="12sp"
        android:maxLength="4"
        android:focusable="true"
        android:hint="@string/four_digit"
        android:ems="10" />


    <TextView
        android:id="@+id/reenter_passcode_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:textSize="12sp"
        android:text="@string/reenter_passcode"
        android:textStyle="bold"
        android:layout_below="@id/enter_new_passcode_editTxt"/>

    <EditText
        android:id="@+id/reenter_passcode_editTxt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/reenter_passcode_txt"
        android:gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:inputType="numberPassword"
        android:textSize="12sp"
        android:maxLength="4"
        android:focusable="true"
        android:hint="@string/four_digit"
        android:ems="10" />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change"
        android:gravity="center"
        android:layout_below="@+id/reenter_passcode_editTxt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/change_button"/>
</RelativeLayout>