<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rkr.mysiminfo.Login">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textStyle="bold"
        android:id="@+id/title_name"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unlock_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/unlock_text"
        android:layout_below="@+id/title_name"/>

    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:maxLength="1"
        android:id="@+id/editText_1stDigit"
        android:inputType="numberPassword"
        android:layout_below="@+id/unlock_text"
        android:layout_toLeftOf="@+id/unlock_text"
        android:layout_toStartOf="@+id/unlock_text"
        android:gravity="center" />

    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:maxLength="1"
        android:id="@+id/editText_2ndDigit"
        android:layout_below="@+id/unlock_text"
        android:inputType="numberPassword"
        android:layout_toRightOf="@+id/editText_1stDigit"
        android:layout_toEndOf="@+id/editText_1stDigit"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:gravity="center"
        />
    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:maxLength="1"
        android:id="@+id/editText_3rdDigit"
        android:layout_below="@+id/unlock_text"
        android:inputType="numberPassword"
        android:layout_toRightOf="@+id/editText_2ndDigit"
        android:layout_toEndOf="@+id/editText_2ndDigit"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:gravity="center"/>
    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:maxLength="1"
        android:id="@+id/editText_4ttDigit"
        android:layout_below="@+id/unlock_text"
        android:inputType="numberPassword"
        android:layout_toRightOf="@+id/editText_3rdDigit"
        android:layout_toEndOf="@+id/editText_3rdDigit"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:gravity="center"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_below="@id/editText_1stDigit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/button_login"
        />
</RelativeLayout>
